[gd_scene load_steps=19 format=3 uid="uid://dcbvpreahnt2f"]

[ext_resource type="Script" uid="uid://bsykg4j3q21dw" path="res://Scenes/Player/player.gd" id="1_6t5aa"]
[ext_resource type="Script" uid="uid://b4r0vjwt5v1pe" path="res://Scenes/UI/Minimap/minimap_tracked_object.gd" id="1_v0iea"]
[ext_resource type="Texture2D" uid="uid://bkdflhjhco4e5" path="res://Assets/player_and_others.png" id="2_cvnsp"]
[ext_resource type="Script" uid="uid://dhm0acbe0tced" path="res://Scenes/Player/player_movement.gd" id="2_ukyrk"]
[ext_resource type="Script" uid="uid://dcr8jjiv8yg4s" path="res://Scenes/Player/player_health.gd" id="3_7dp3o"]
[ext_resource type="Material" uid="uid://cynyba7yprm84" path="res://Shaders/player.tres" id="3_f1ek2"]
[ext_resource type="PackedScene" uid="uid://iow6shlx8o0w" path="res://Scenes/particles/trail.tscn" id="4_vgqql"]
[ext_resource type="Script" uid="uid://cqkya5fecy8pk" path="res://Scenes/Weapons/general/weapon_manager.gd" id="5_fkybt"]
[ext_resource type="Script" uid="uid://cr4xhgffbxb0j" path="res://Scenes/Player/PlayerInteraction.gd" id="7_3smsa"]
[ext_resource type="PackedScene" uid="uid://86i1caic40vk" path="res://Scenes/particles/thrust.tscn" id="8_f1ek2"]
[ext_resource type="Script" uid="uid://brwtwnigrt0y7" path="res://Data/WeaponData.gd" id="9_tx1dd"]
[ext_resource type="Resource" uid="uid://bi01ro1j5gj7h" path="res://Data/pistol.tres" id="10_gymyn"]
[ext_resource type="Script" uid="uid://ohf7hfsapmlu" path="res://Scenes/particles/hit_effect.gd" id="12_pu2lt"]
[ext_resource type="Texture2D" uid="uid://crr37cm1dgssb" path="res://Assets/hit_4.png" id="13_7dp3o"]
[ext_resource type="Resource" uid="uid://ulqehd0g6ycf" path="res://Data/twin.tres" id="13_dey5f"]
[ext_resource type="Resource" uid="uid://cjwnh1iq63xf8" path="res://Data/shotgun.tres" id="14_r5xpd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3smsa"]
radius = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f1ek2"]
radius = 4.0
height = 14.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
self_modulate = Color(0.44313726, 0.28235295, 0.39607844, 1)
collision_mask = 0
motion_mode = 1
script = ExtResource("1_6t5aa")
initial_velocity = Vector2(100, 0)

[node name="Movement" type="Node2D" parent="." node_paths=PackedStringArray("thrust_particles")]
rotation = 0.01833335
script = ExtResource("2_ukyrk")
gravity_multiplier = 2.0
thrust_accel = 100.0
max_speed = 100.0
rotate_with_motion = false
thrust_particles = NodePath("../thrust")
fuel_fulluse_recharge = 0.1
fuel_recharge_rate_fulluse = 5.0
thrust_curve_strength = 2.0
thrust_intensity_max = 3.0
extra_speed_limit = 300.0
speed_limit_grow_rate = 30.0
speed_limit_decay_rate = 1.0

[node name="Health" type="Node2D" parent="." node_paths=PackedStringArray("body_sprite", "hit_effect_sprite")]
script = ExtResource("3_7dp3o")
hit_pause_duration = 0.3
hit_effect_duration = 0.1
body_sprite = NodePath("../Sprite")
hit_effect_sprite = NodePath("../HitEffect")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("7_3smsa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_3smsa")

[node name="thrust" parent="." instance=ExtResource("8_f1ek2")]
position = Vector2(-2, 0)
rotation = 3.1415927

[node name="MinimapTracker" type="Node2D" parent="." node_paths=PackedStringArray("target_node")]
script = ExtResource("1_v0iea")
target_node = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 5
texture_filter = 1
material = ExtResource("3_f1ek2")
rotation = -1.5707964
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_cvnsp")
region_enabled = true
region_rect = Rect2(224, 4, 96, 172)

[node name="Trail" parent="." instance=ExtResource("4_vgqql")]
z_index = 4
material = ExtResource("3_f1ek2")
width = 2.0
body_path = NodePath("..")
width = 2.0
color = Color(1, 1, 1, 1)

[node name="WeaponManager" type="Node2D" parent="."]
script = ExtResource("5_fkybt")
starting_loadout = Array[ExtResource("9_tx1dd")]([ExtResource("10_gymyn"), ExtResource("13_dey5f"), ExtResource("14_r5xpd")])

[node name="WeaponSocket" type="Marker2D" parent="WeaponManager"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 5
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_f1ek2")

[node name="HitEffect" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(18.892, 18.892, 18.892, 0.455)
show_behind_parent = true
z_index = -5
texture_filter = 1
position = Vector2(-0.617218, -0.04132843)
rotation = -0.9072484
scale = Vector2(0.7, 0.7)
texture = ExtResource("13_7dp3o")
offset = Vector2(3.6909237, -15.3403015)
script = ExtResource("12_pu2lt")

[node name="HitEffect2" type="Sprite2D" parent="HitEffect"]
self_modulate = Color(18.892, 18.892, 18.892, 0.639)
show_behind_parent = true
z_index = -5
texture_filter = 1
rotation = 0.9471213
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_7dp3o")
offset = Vector2(3.6909237, -15.3403015)
script = ExtResource("12_pu2lt")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="Area2D" method="_on_area_exited"]
